syntax = "proto3";

import "transaction.proto";

package types;

// GuessGame
message GuessGame {
    string   gameID                    = 1; //  ID
    int32    status                    = 2; //     ：  ->  ->    ->
    int32    preStatus                 = 3;
    int64    startTime                 = 4;  //
    int64    startHeight               = 5;  //
    string   startTxHash               = 6;  //       hash
    int64    startIndex                = 7;  //       index
    string   topic                     = 8;  //
    string   category                  = 9;  //
    string   options                   = 10; //
    int64    maxBetHeight              = 11; //
    int64    maxBetsOneTime            = 12; //        ，  100
    int64    maxBetsNumber             = 13; //
    int64    devFeeFactor              = 14; //
    string   devFeeAddr                = 15; //
    int64    platFeeFactor             = 16; //
    string   platFeeAddr               = 17; //
    int64    expireHeight              = 18; //
    string   adminAddr                 = 19; //       ,
    int64    betsNumber                = 20; //    ,      maxBetsNumber，
    repeated GuessPlayer plays         = 21; //
    string               result        = 22; //
    GuessBetStat         betStat       = 23;
    int64                index         = 24;
    int64                preIndex      = 25;
    bool                 drivenByAdmin = 26;
}

// GuessPlayer
message GuessPlayer {
    string   addr = 1;
    GuessBet bet  = 2;
}

// GuessBet
message GuessBet {
    string option     = 1;
    int64  betsNumber = 2;
    bool   isWinner   = 3;
    int64  profit     = 4;
    int64  index      = 5;
    int64  preIndex   = 6;
}

// GuessBetStat
message GuessBetStat {
    int64    totalBetTimes          = 1;
    int64    totalBetsNumber        = 2;
    repeated GuessBetStatItem items = 3;
}

// GuessBetStat
message GuessBetStatItem {
    string option     = 1;
    int64  betsNumber = 2;
    int64  betsTimes  = 3;
}

// GuessGameAction
message GuessGameAction {
    oneof value {
        GuessGameStart   start   = 1;
        GuessGameBet     bet     = 2;
        GuessGameStopBet stopBet = 3;
        GuessGameAbort   abort   = 4;
        GuessGamePublish publish = 5;
        GuessGameQuery   query   = 6;
    }
    int32 ty = 7;
}

// GuessGameStart
message GuessGameStart {
    string topic          = 1;
    string options        = 2;
    string category       = 3;
    int64  maxBetHeight   = 4;
    int64  maxBetsOneTime = 5;
    int64  maxBetsNumber  = 6;
    int64  devFeeFactor   = 7;  //
    string devFeeAddr     = 8;  //
    int64  platFeeFactor  = 9;  //
    string platFeeAddr    = 10; //
    int64  expireHeight   = 11;
    bool   drivenByAdmin  = 12;
}

// GuessGameBet
message GuessGameBet {
    string gameID  = 1;
    string option  = 2;
    int64  betsNum = 3;
}

// GuessGameStopBet
message GuessGameStopBet {
    string gameID = 1;
}

// GuessGameAbort       ,
message GuessGameAbort {
    string gameID = 1;
}

// GuessGamePublish
message GuessGamePublish {
    string gameID = 1;
    string result = 2;
}

// GuessGameQuery
message GuessGameQuery {
    string gameID = 1;
    uint32 ty     = 2;
}

// QueryGuessGameInfo
message QueryGuessGameInfo {
    string gameID     = 1;
    string addr       = 2;
    int32  status     = 3;
    int64  index      = 4;
    string adminAddr  = 5;
    string category   = 6;
    string primaryKey = 7;
}

// ReplyGuessGameInfo
message ReplyGuessGameInfo {
    GuessGame game = 1;
}

// QueryGuessGameInfos
message QueryGuessGameInfos {
    repeated string gameIDs = 1;
}

// ReplyGuessGameInfos
message ReplyGuessGameInfos {
    repeated GuessGame games = 1;
}

// ReceiptGuessGame
message ReceiptGuessGame {
    int64     startIndex   = 1;
    string    gameID       = 2;
    int32     preStatus    = 3;
    int32     status       = 4;
    string    addr         = 5;
    string    adminAddr    = 6;
    int64     preIndex     = 7;
    int64     index        = 8;
    string    category     = 9;
    bool      statusChange = 10;
    bool      bet          = 11;
    string    option       = 12;
    int64     betsNumber   = 13;
    GuessGame game         = 14;
}

// UserBet
message UserBet {
    int64  startIndex = 1;
    int64  index      = 2;
    string gameID     = 3;
    string addr       = 4;
    string option     = 5;
    int64  betsNumber = 6;
}

// GuessStartTxReq   start
message GuessStartTxReq {
    string topic          = 1;
    string options        = 2;
    string category       = 3;
    int64  maxHeight      = 4;
    int64  maxBetHeight   = 5;
    int64  maxBetsOneTime = 6;
    int64  maxBetsNumber  = 7;
    int64  devFeeFactor   = 8;
    string devFeeAddr     = 9;
    int64  platFeeFactor  = 10;
    string platFeeAddr    = 11;
    int64  expireHeight   = 12;
    int64  fee            = 13;
}

// GuessBetTxReq   bet
message GuessBetTxReq {
    string gameID = 1;
    string option = 2;
    int64  bets   = 3;
    int64  fee    = 4;
}

// GuessStopBetTxReq   stopBet
message GuessStopBetTxReq {
    string gameID = 1;
    int64  fee    = 2;
}

// GuessAbortTxReq   abort
message GuessAbortTxReq {
    string gameID = 1;
    int64  fee    = 2;
}

// GuessPublishTxReq   publish
message GuessPublishTxReq {
    string gameID = 1;
    string result = 2;
    int64  fee    = 3;
}

// GuessGameRecord game
message GuessGameRecord {
    string gameID     = 1;
    int64  startIndex = 2;
}

// GuessGameRecords game
message GuessGameRecords {
    repeated GuessGameRecord records    = 1;
    string                   primaryKey = 2;
}

// service guess　 guess
service guess {
    //
    rpc GuessStart(GuessGameStart) returns (UnsignTx) {}
    //
    rpc GuessBet(GuessGameBet) returns (UnsignTx) {}
    //
    rpc GuessStopBet(GuessGameStopBet) returns (UnsignTx) {}
    //
    rpc GuessAbort(GuessGameAbort) returns (UnsignTx) {}
    //
    rpc GuessPublish(GuessGamePublish) returns (UnsignTx) {}
}
