// Copyright D-Platform Corp. 2018 All Rights Reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

import "common.proto";

package types;

message Unfreeze {
    //    ID（     ）
    string unfreezeID = 1;
    //
    int64 startTime = 2;
    //
    string assetExec   = 3;
    string assetSymbol = 4;
    //
    int64 totalCount = 5;
    //
    string initiator = 6;
    //
    string beneficiary = 7;
    //
    int64 remaining = 8;
    //    （   ；  ）
    string means = 9;
    oneof  meansOpt {
        FixAmount      fixAmount      = 10;
        LeftProportion leftProportion = 11;
    }
    bool terminated = 12;
}

//
message FixAmount {
    int64 period = 1;
    int64 amount = 2;
}

//
message LeftProportion {
    int64 period        = 1;
    int64 tenThousandth = 2;
}

// message for execs.unfreeze
message UnfreezeAction {
    oneof value {
        UnfreezeCreate    create    = 1;
        UnfreezeWithdraw  withdraw  = 2;
        UnfreezeTerminate terminate = 3;
    }
    int32 ty = 4;
}

// action
message UnfreezeCreate {
    int64  startTime   = 1;
    string assetExec   = 2;
    string assetSymbol = 3;
    int64  totalCount  = 4;
    string beneficiary = 5;
    string means       = 6;
    oneof  meansOpt {
        FixAmount      fixAmount      = 7;
        LeftProportion leftProportion = 8;
    }
}

message UnfreezeWithdraw {
    string unfreezeID = 1;
}

message UnfreezeTerminate {
    string unfreezeID = 1;
}

// receipt
message ReceiptUnfreeze {
    Unfreeze prev    = 1;
    Unfreeze current = 2;
}

message LocalUnfreeze {
    Unfreeze unfreeze = 1;
    string   txIndex  = 2;
}

// query
message ReplyQueryUnfreezeWithdraw {
    string unfreezeID      = 1;
    int64  availableAmount = 2;
}

message ReqUnfreezes {
    int32  direction   = 1;
    int32  count       = 2;
    string fromKey     = 3;
    string initiator   = 4;
    string beneficiary = 5;
}

message ReplyUnfreeze {
    //    ID（     ）
    string unfreezeID = 1;
    //
    int64 startTime = 2;
    //
    string assetExec   = 3;
    string assetSymbol = 4;
    //
    int64 totalCount = 5;
    //
    string initiator = 6;
    //
    string beneficiary = 7;
    //
    int64 remaining = 8;
    //    （   ；  ）
    string means = 9;
    oneof  meansOpt {
        FixAmount      fixAmount      = 10;
        LeftProportion leftProportion = 11;
    }
    bool   terminated = 12;
    string key        = 13;
}
message ReplyUnfreezes {
    repeated ReplyUnfreeze unfreeze = 1;
}

// TODO
service unfreeze {
    rpc GetUnfreezeWithdraw(ReqString) returns (ReplyQueryUnfreezeWithdraw) {}
    rpc QueryUnfreeze(ReqString) returns (Unfreeze) {}
}